added tab name and logo

--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/shutter.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Creative and expressive photographer capturing unique moments and emotions, Artistic and visionary photographer creating stunning images with a natural and candid approach, Editorial and conceptual photographer with a bold and memorable style. Intimate and emotive photographer capturing timeless moments with a stylish touch, Dramatic and evocative photographer with an authentic and dynamic perspective."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,23 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+     <!-- Twitter Meta Tags -->
+     <meta name="twitter:card" content="summary_large_image">
+     <meta property="twitter:domain" content="http://www.shutter.pics">
+     <meta property="twitter:url" content="http://www.shutter.pics">
+     <meta name="twitter:title" content="Shutterpics || Personal Portfolio">
+     <meta name="twitter:description" content="Creative and expressive photographer capturing unique moments and emotions, Artistic and visionary photographer creating stunning images with a natural and candid approach, Editorial and conceptual photographer with a bold and memorable style. Intimate and emotive photographer capturing timeless moments with a stylish touch, Dramatic and evocative photographer with an authentic and dynamic perspective.">
+     <meta name="twitter:image" content="https://raw.githubusercontent.com/Desp0o/dataBase/main/images/7.webp">
+
+     <meta property="og:url" content="http://www.shutter.pics">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Shutterpics || Personal Portfolio">
+    <meta property="og:description" content="Creative and expressive photographer capturing unique moments and emotions, Artistic and visionary photographer creating stunning images with a natural and candid approach, Editorial and conceptual photographer with a bold and memorable style. Intimate and emotive photographer capturing timeless moments with a stylish touch, Dramatic and evocative photographer with an authentic and dynamic perspective.">
+    <meta property="og:image" content="https://raw.githubusercontent.com/Desp0o/dataBase/main/images/7.webp">
+    <meta name="image" property="og:image" content="https://raw.githubusercontent.com/Desp0o/dataBase/main/images/7.webp">
+
+    <title>Shutterpics</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
