--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="author" content="Tornike Despotashvili">
+    <meta name="keywords" content="Creative, Unique, Expressive, Dynamic, Artistic, Visionary, Evocative, Authentic, Editorial, Conceptual, Natural, Candid, Timeless, Stylish, Intimate, Emotive, stunning, dramatic, bold, memorable, react, html, css, js">
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/shutter.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -32,13 +34,13 @@
      <meta name="twitter:title" content="Shutterpics || Personal Portfolio">
      <meta name="twitter:description" content="Creative and expressive photographer capturing unique moments and emotions, Artistic and visionary photographer creating stunning images with a natural and candid approach, Editorial and conceptual photographer with a bold and memorable style. Intimate and emotive photographer capturing timeless moments with a stylish touch, Dramatic and evocative photographer with an authentic and dynamic perspective.">
      <meta name="twitter:image" content="https://shutter.pics/static/media/mainBg.705011e4674892916626.webp">
-
+     <meta name="image" property="og:image" content="https://shutter.pics/static/media/mainBg.705011e4674892916626.webp">
      <meta property="og:url" content="http://www.shutter.pics">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Shutterpics || Personal Portfolio">
-    <meta property="og:description" content="Creative and expressive photographer capturing unique moments and emotions, Artistic and visionary photographer creating stunning images with a natural and candid approach, Editorial and conceptual photographer with a bold and memorable style. Intimate and emotive photographer capturing timeless moments with a stylish touch, Dramatic and evocative photographer with an authentic and dynamic perspective.">
-    <meta property="og:image" content="https://shutter.pics/static/media/mainBg.705011e4674892916626.webp">
-    <meta name="image" property="og:image" content="https://shutter.pics/static/media/mainBg.705011e4674892916626.webp">
+     <meta property="og:type" content="website">
+     <meta property="og:title" content="Shutterpics || Personal Portfolio">
+     <meta property="og:description" content="Creative and expressive photographer capturing unique moments and emotions, Artistic and visionary photographer creating stunning images with a natural and candid approach, Editorial and conceptual photographer with a bold and memorable style. Intimate and emotive photographer capturing timeless moments with a stylish touch, Dramatic and evocative photographer with an authentic and dynamic perspective.">
+     <meta property="og:image" content="https://shutter.pics/static/media/mainBg.705011e4674892916626.webp">
+     <meta name="image" property="og:image" content="https://shutter.pics/static/media/mainBg.705011e4674892916626.webp">
 
     <title>Shutterpics</title>
   </head>
