--- a/public/index.html
+++ b/public/index.html
@@ -33,14 +33,14 @@
      <meta property="twitter:url" content="http://www.shutter.pics">
      <meta name="twitter:title" content="Shutterpics || Personal Portfolio">
      <meta name="twitter:description" content="Creative and expressive photographer capturing unique moments and emotions, Artistic and visionary photographer creating stunning images with a natural and candid approach, Editorial and conceptual photographer with a bold and memorable style. Intimate and emotive photographer capturing timeless moments with a stylish touch, Dramatic and evocative photographer with an authentic and dynamic perspective.">
-     <meta name="twitter:image" content="https://shutter.pics/static/media/Tent-3.63bfba6c18ab6d87379e.jpg">
-     <meta name="image" property="og:image" content="https://shutter.pics/static/media/Tent-3.63bfba6c18ab6d87379e.jpg">
+     <meta name="twitter:image" content="%PUBLIC_URL%/Tent-3.jpg">
+     <meta name="image" property="og:image" content="%PUBLIC_URL%/Tent-3.jpg">
      <meta property="og:url" content="http://www.shutter.pics">
      <meta property="og:type" content="website">
      <meta property="og:title" content="Shutterpics || Personal Portfolio">
      <meta property="og:description" content="Creative and expressive photographer capturing unique moments and emotions, Artistic and visionary photographer creating stunning images with a natural and candid approach, Editorial and conceptual photographer with a bold and memorable style. Intimate and emotive photographer capturing timeless moments with a stylish touch, Dramatic and evocative photographer with an authentic and dynamic perspective.">
-     <meta property="og:image" content="https://shutter.pics/static/media/Tent-3.63bfba6c18ab6d87379e.jpg">
-     <meta name="image" property="og:image" content="https://shutter.pics/static/media/Tent-3.63bfba6c18ab6d87379e.jpg">
+     <meta property="og:image" content="%PUBLIC_URL%/Tent-3.jpg">
+     <meta name="image" property="og:image" content="%PUBLIC_URL%/Tent-3.jpg">
 
     <title>Shutterpics</title>
   </head>
